--- a/styles.css
+++ b/styles.css
@@ -106,3 +106,17 @@ button:hover {
 .social-icon:hover {
     transform: scale(1.1); /* Agrandit l'icône au survol */
 }
+.profile-photo-container {
+    margin: 20px auto;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 50%;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.profile-photo {
+    width: 100%;
+    height: auto;
+    display: block;
+}
